# valobs

./: Cargo.toml  README.md
src/: communication.rs  financial.rs  geography.rs  lib.rs  result.rs  temporal.rs  traits.rs
src/communication/: email.rs
src/financial/: currency.json  currency.rs  money.rs
src/geography/: address.rs  altitude.rs  continent.rs  country.rs  geo_location.rs  latitude.rs  longitude.rs
src/geography/country/: country_code.rs  country_name.rs
