[package]
name = "valobs"
version = "0.1.0"
edition = "2021"
description = "Valobs - A collection of commonly used value objects in enterprise applications"
license = "Apache-2.0"
repository = "https://github.com/MRGRAVITY817/valobs"
homepage = "https://github.com/MRGRAVITY817/valobs"
documentation = "https://docs.rs/valobs/"
readme = "README.md"
categories = [
  "development-tools",
  "web-programming",
  "data-structures",
  "value-formatting",
]
keywords = [
  "ddd",
  "domain-driven-design",
  "value-object",
  "enterprise",
  "application",
]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
validator = { version = "0.16", features = ["derive"] }
nutype = { version = "0.4.0", features = ["regex", "serde"] }
rusty-money = "0.4.1"
chrono = "0.4.31"
lazy_static = "1.4.0"
regex = "1.10.2"
phonenumber = "0.3"

[dev-dependencies]
serde_json = "1.0"
